fix build error on Release mode and add static-link option

--- a/templates/cpp-template-default/proj.tizen/.cproject
+++ b/templates/cpp-template-default/proj.tizen/.cproject
@@ -475,6 +475,7 @@
 									<listOptionValue builtIn="false" value="png"/>
 									<listOptionValue builtIn="false" value="chipmunk"/>
 								</option>
+								<option id="gnu.cpp.link.option.flags.1212547247" superClass="gnu.cpp.link.option.flags" value="-static-libstdc++" valueType="string"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1393355013" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
 									<additionalInput kind="additionalinput" paths="$(LIBS)"/>
