Update the submodule js-bindings & update solution files for js-bindings.

--- a/tools/tojs/cocos2dx_studio.ini
+++ b/tools/tojs/cocos2dx_studio.ini
@@ -56,7 +56,8 @@ skip = *::[createInstance ^visit$ copyWith.* onEnter.* onExit.* ^description$ ge
         ColliderBody::[getContourData getCalculatedVertexList],
         SceneReader::[*],
         CSLoader::[*],
-        ActionTimelineCache::[*]
+        ActionTimelineCache::[*],
+        Frame::[(s|g)etEasingParams]
 
 rename_functions = Armature::[getBoundingBox=boundingBox]
 
