--- a/tools/tojs/cocos2dx_3d.ini
+++ b/tools/tojs/cocos2dx_3d.ini
@@ -26,7 +26,7 @@ headers = %(cocosdir)s/cocos/cocos2d.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard Sprite3DCache
+classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard Sprite3DCache TextureCube Skybox
 
 classes_need_extend = Sprite3D
 
@@ -40,10 +40,12 @@ classes_need_extend = Sprite3D
 skip = Skeleton3D::[create],
         Sprite3D::[getAABB getMeshArrayByName createAsync],
         Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute],
-        Sprite3DCache::[addSprite3DData getSpriteData]
+        Sprite3DCache::[addSprite3DData getSpriteData],
+        Animation3D::[getBoneCurves],
+        TextureCube::[setTexParameters]
 
 
-rename_functions = 
+Rename_functions = 
 
 rename_classes = 
 
