--- a/templates/lua-template-default/cocos-project-template.json
+++ b/templates/lua-template-default/cocos-project-template.json
@@ -144,7 +144,8 @@
                 "frameworks/runtime-src/proj.win32/PROJECT_NAME.vcxproj.filters",
                 "frameworks/runtime-src/proj.win32/PROJECT_NAME.vcxproj.user",
                 "frameworks/runtime-src/proj.win32/PROJECT_NAME.sln",
-                "frameworks/runtime-src/proj.ios_mac/PROJECT_NAME.xcodeproj"
+                "frameworks/runtime-src/proj.ios_mac/PROJECT_NAME.xcodeproj",
+                "frameworks/runtime-src/proj.tizen/shared/res/PROJECT_NAME.png"
             ]
         },
         "project_replace_project_name": {
@@ -164,13 +165,16 @@
                 "frameworks/runtime-src/proj.ios_mac/ios/main.m",
                 "frameworks/runtime-src/proj.ios_mac/ios/Prefix.pch",
                 "frameworks/runtime-src/proj.ios_mac/mac/SimulatorApp.mm",
-                "frameworks/runtime-src/proj.ios_mac/PROJECT_NAME.xcodeproj/project.pbxproj"
+                "frameworks/runtime-src/proj.ios_mac/PROJECT_NAME.xcodeproj/project.pbxproj",
+                "frameworks/runtime-src/proj.tizen/.project",
+                "frameworks/runtime-src/proj.tizen/tizen-manifest.xml"
             ]
         },
         "project_replace_package_name": {
             "src_package_name": "org.cocos2dx.hellolua",
             "files": [
-                "frameworks/runtime-src/proj.android/AndroidManifest.xml"
+                "frameworks/runtime-src/proj.android/AndroidManifest.xml",
+                "frameworks/runtime-src/proj.tizen/tizen-manifest.xml"
             ]
         },
         "project_replace_mac_bundleid": {
