--- a/templates/js-template-default/frameworks/runtime-src/proj.win8.1-universal/App.Windows/HelloJavascript.Windows.vcxproj
+++ b/templates/js-template-default/frameworks/runtime-src/proj.win8.1-universal/App.Windows/HelloJavascript.Windows.vcxproj
@@ -74,39 +74,39 @@
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
-    <Import Project="..\..\..\js-bindings\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_platform.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1.props" />
+    <Import Project="..\..\..\cocos2d-x\cocos\2d\winrt_8.1_props\cocos2d_winrt_8.1_app.props" />
     <Import Project="..\resources.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -182,16 +182,16 @@
     <Image Include="Assets\SplashScreen.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\js-bindings\bindings\proj.win8.1-universal\libJSBinding\libJSBinding.Windows\libJSBinding.Windows.vcxproj">
+    <ProjectReference Include="..\..\..\cocos2d-x\cocos\scripting\js-bindings\proj.win8.1-universal\libjscocos2d\libjscocos2d.Windows\libjscocos2d.Windows.vcxproj">
       <Project>{bcf5546d-66a0-4998-afd6-c5514f618930}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\js-bindings\cocos2d-x\cocos\2d\libcocos2d_8_1\libcocos2d_8_1\libcocos2d_8_1.Windows\libcocos2d_8_1.Windows.vcxproj">
+    <ProjectReference Include="..\..\..\cocos2d-x\cocos\2d\libcocos2d_8_1\libcocos2d_8_1\libcocos2d_8_1.Windows\libcocos2d_8_1.Windows.vcxproj">
       <Project>{9335005f-678e-4e8e-9b84-50037216aec8}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\js-bindings\cocos2d-x\cocos\editor-support\spine\proj.win8.1-universal\libSpine.Windows\libSpine.Windows.vcxproj">
+    <ProjectReference Include="..\..\..\cocos2d-x\cocos\editor-support\spine\proj.win8.1-universal\libSpine.Windows\libSpine.Windows.vcxproj">
       <Project>{f3550fe0-c795-44f6-8feb-093eb68143ae}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\js-bindings\cocos2d-x\external\Box2D\proj.win8.1-universal\libbox2d.Windows\libbox2d.Windows.vcxproj">
+    <ProjectReference Include="..\..\..\cocos2d-x\external\Box2D\proj.win8.1-universal\libbox2d.Windows\libbox2d.Windows.vcxproj">
       <Project>{3b26a12d-3a44-47ea-82d2-282660fc844d}</Project>
     </ProjectReference>
   </ItemGroup>
