Update js bindings.

--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -101,7 +101,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         CatmullRom.*::[create actionWithDuration initWithDuration],
         Bezier.*::[create actionWithDuration initWithDuration],
         CardinalSpline.*::[create actionWithDuration setPoints initWithDuration],
-        Scheduler::[pause resume unschedule schedule isTargetPaused isScheduled],
+        Scheduler::[pause resume ^unschedule$ unscheduleUpdate unscheduleAllForTarget schedule isTargetPaused isScheduled],
         TextureCache::[addPVRTCImage],
         *::[copyWith.* onEnter.* onExit.* ^description$ getObjectType onTouch.* onAcc.* onKey.* onRegisterTouchListener],
         FileUtils::[getFileData getDataFromFile setFilenameLookupDictionary destroyInstance getFullPathCache],
@@ -121,7 +121,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         Component::[serialize],
         EventListenerCustom::[init],
         EventListener::[init],
-        Scene::[getCameras getLights],
+        Scene::[getCameras getLights initWithPhysics createWithPhysics getPhysicsWorld],
         Animate3D::[*],
         Sprite3D::[*],
         AttachNode::[*],
