--- a/tools/tojs/cocos2dx_3d.ini
+++ b/tools/tojs/cocos2dx_3d.ini
@@ -26,7 +26,7 @@ headers = %(cocosdir)s/cocos/cocos2d.h
 
 # what classes to produce code for. You can use regular expressions here. When testing the regular
 # expression, it will be enclosed in "^$", like this: "^Menu*$".
-classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard Sprite3DCache TextureCube Skybox
+classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard Sprite3DCache TextureCube Skybox Terrain
 
 classes_need_extend = Sprite3D
 
@@ -42,10 +42,11 @@ skip = Skeleton3D::[create],
         Mesh::[create getMeshCommand getAABB getDefaultGLProgram getMeshVertexAttribute],
         Sprite3DCache::[addSprite3DData getSpriteData],
         Animation3D::[getBoneCurves],
-        TextureCube::[setTexParameters]
+        TextureCube::[setTexParameters],
+        Terrain::[getAABB getQuadTree create]
 
 
-Rename_functions = 
+rename_functions = 
 
 rename_classes = 
 
