Update cocos2dx_3d.ini and cocos2dx.ini for generating Lua bindings code to support CC_CONSTRUCTOR_ACCESS  equal to public

--- a/tools/tolua/cocos2dx_3d.ini
+++ b/tools/tolua/cocos2dx_3d.ini
@@ -35,8 +35,8 @@ classes = Animate3D Sprite3D Animation3D Skeleton3D ^Mesh$ AttachNode BillBoard 
 # will apply to all class names. This is a convenience wildcard to be able to skip similar named
 # functions from all classes.
 
-skip = Mesh::[create getAABB getVertexBuffer hasVertexAttrib getSkin getMeshIndexData getGLProgramState getPrimitiveType getIndexCount getIndexFormat getIndexBuffer],
-       Sprite3D::[getSkin getAABB getMeshArrayByName createAsync],
+skip = Mesh::[create getAABB getVertexBuffer hasVertexAttrib getSkin getMeshIndexData getGLProgramState getPrimitiveType getIndexCount getIndexFormat getIndexBuffer getMeshCommand getDefaultGLProgram],
+       Sprite3D::[getSkin getAABB getMeshArrayByName createAsync init initWithFile initFrom loadFromCache loadFromFile visit genGLProgramState createNode createAttachSprite3DNode createSprite3DNode getMeshIndexData addMesh onAABBDirty afterAsyncLoad],
        Skeleton3D::[create],
        Animation3D::[getBoneCurveByName getBoneCurves],
        BillBoard::[draw],
@@ -59,7 +59,7 @@ base_classes_to_skip = Clonable
 
 # classes that create no constructor
 # Set is special and we will use a hand-written constructor
-abstract_classes =
+abstract_classes = Sprite3D
 
 # Determining whether to use script object(js object) to control the lifecycle of native(cpp) object or the other way around. Supported values are 'yes' or 'no'.
 script_control_cpp = no
