move physics3d into cocos folder(Windows Linux)

--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -357,14 +357,6 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\..\extensions\Particle3D\PU\CCPUVortexAffectorTranslator.cpp" />
     <ClCompile Include="..\..\extensions\physics-nodes\CCPhysicsDebugNode.cpp" />
     <ClCompile Include="..\..\extensions\physics-nodes\CCPhysicsSprite.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3D.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DComponent.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DConstraint.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DDebugDrawer.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DObject.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DShape.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysics3DWorld.cpp" />
-    <ClCompile Include="..\..\extensions\Physics3D\CCPhysicsSprite3D.cpp" />
     <ClCompile Include="..\..\external\ConvertUTF\ConvertUTF.c" />
     <ClCompile Include="..\..\external\ConvertUTF\ConvertUTFWrapper.cpp" />
     <ClCompile Include="..\..\external\edtaa3func\edtaa3func.cpp" />
@@ -570,6 +562,14 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\network\HttpClient.cpp" />
     <ClCompile Include="..\network\SocketIO.cpp" />
     <ClCompile Include="..\network\WebSocket.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3D.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DComponent.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DConstraint.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DDebugDrawer.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DObject.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DShape.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysics3DWorld.cpp" />
+    <ClCompile Include="..\physics3d\CCPhysicsSprite3D.cpp" />
     <ClCompile Include="..\physics\CCPhysicsBody.cpp" />
     <ClCompile Include="..\physics\CCPhysicsContact.cpp" />
     <ClCompile Include="..\physics\CCPhysicsJoint.cpp" />
@@ -884,14 +884,6 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\..\extensions\Particle3D\PU\CCPUVortexAffectorTranslator.h" />
     <ClInclude Include="..\..\extensions\physics-nodes\CCPhysicsDebugNode.h" />
     <ClInclude Include="..\..\extensions\physics-nodes\CCPhysicsSprite.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3D.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DComponent.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DConstraint.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DDebugDrawer.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DObject.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DShape.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysics3DWorld.h" />
-    <ClInclude Include="..\..\extensions\Physics3D\CCPhysicsSprite3D.h" />
     <ClInclude Include="..\..\external\ConvertUTF\ConvertUTF.h" />
     <ClInclude Include="..\..\external\edtaa3func\edtaa3func.h" />
     <ClInclude Include="..\..\external\flatbuffers\flatbuffers.h" />
@@ -1143,6 +1135,14 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\network\HttpResponse.h" />
     <ClInclude Include="..\network\SocketIO.h" />
     <ClInclude Include="..\network\WebSocket.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3D.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DComponent.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DConstraint.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DDebugDrawer.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DObject.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DShape.h" />
+    <ClInclude Include="..\physics3d\CCPhysics3DWorld.h" />
+    <ClInclude Include="..\physics3d\CCPhysicsSprite3D.h" />
     <ClInclude Include="..\physics\CCPhysicsBody.h" />
     <ClInclude Include="..\physics\CCPhysicsContact.h" />
     <ClInclude Include="..\physics\CCPhysicsHelper.h" />
